--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
-    <script src="script.js"></script> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css"/>
-    <script type="text/javascript">
-      Coloris({
-        swatches: [
-          '#FF0000',
-          '#0000FF',
-          '#339933',
-          '#FFFF00',
-          '#A020F0',
-          '#FFA500'
-        ],
-        theme: 'pill'
-      });
-    </script>
-  </head> 
-   <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css" />
+  <script type="text/javascript">
+    Coloris({
+      swatches: [
+        '#FF0000',
+        '#0000FF',
+        '#339933',
+        '#FFFF00',
+        '#A020F0',
+        '#FFA500'
+      ],
+      theme: 'pill'
+    });
+  </script>
+</head>
+
+<body>
   Challenge (1-3)
-    <input type="text" id="challenge">
-   Size (4/6)
-   <input type="text" id="size">
+  <input type="text" id="challenge">
+  Size (4/6)
+  <input type="text" id="size">
   <button onclick="createGrid()">Generate</button>
   <hr>
-  <div id="pallete">
-    <input type="text" value="Red" id="picker-1" data-coloris>
-    <input type="text" value="Blue" id="picker-2" data-coloris>
-    <input type="text" value="Green" id="picker-3" data-coloris>
-    <input type="text" value="Yellow" id="picker-4" data-coloris>
-    <input type="text" value="Purple" id="picker-5" data-coloris>
-    <input type="text" value="Orange" id="picker-6" data-coloris>
+  <div class="row">
+    <div class="column">
+      <div id="grid"></div>
+    </div>
+    <div class="column">
+      <div id="pallete">
+        <input type="text" value="Red" id="picker-1" data-coloris>
+        <input type="text" value="Blue" id="picker-2" data-coloris>
+        <input type="text" value="Green" id="picker-3" data-coloris>
+        <input type="text" value="Yellow" id="picker-4" data-coloris>
+        <input type="text" value="Purple" id="picker-5" data-coloris>
+        <input type="text" value="Orange" id="picker-6" data-coloris>
+      </div>
+    </div>
   </div>
-  <hr>
-  <div id="grid"></div>
-  <hr>
-  <div id="grid2"></div>
-  
-     </body>
+  <div class="row border-above">
+    <div class="column">
+      <div id="grid2"></div>
+    </div>
+  </div>
+</body>
 
 </html>
