--- a/index.html
+++ b/index.html
@@ -1,55 +1,102 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Color Sudoku</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
-  <script src="script.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css" />
-  <script type="text/javascript">
+  <script>
     Coloris({
-      swatches: [
-        '#FF0000',
-        '#0000FF',
-        '#339933',
-        '#FFFF00',
-        '#A020F0',
-        '#FFA500'
-      ],
+      swatches: ['#FF0000', '#0000FF', '#339933', '#FFFF00', '#A020F0', '#FFA500', '#00FFFF', '#FF00FF', '#A52A2A'],
       theme: 'pill'
     });
   </script>
 </head>
 
 <body>
-  Challenge (1-3)
-  <input type="text" id="challenge">
-  Size (4/6)
-  <input type="text" id="size">
-  <button onclick="createGrid()">Generate</button>
-  <hr>
-  <div class="row">
-    <div class="column">
-      <div id="grid"></div>
+  <div class="container">
+    <div class="title">
+      <h1>Color Sudoku</h1>
     </div>
-    <div class="column">
-      <div id="pallete">
-        <input type="text" value="Red" id="picker-1" data-coloris>
-        <input type="text" value="Blue" id="picker-2" data-coloris>
-        <input type="text" value="Green" id="picker-3" data-coloris>
-        <input type="text" value="Yellow" id="picker-4" data-coloris>
-        <input type="text" value="Purple" id="picker-5" data-coloris>
-        <input type="text" value="Orange" id="picker-6" data-coloris>
+    <div class="mb-3">
+      <label for="challenge" class="form-label">Challenge (1-3):</label>
+      <div class="d-flex">
+        <input type="range" class="form-range input-short" id="challenge" min="1" max="3" value="1">
+      </div>
+    </div>
+    <div class="mb-3">
+      <label for="size" class="form-label">Size:</label>
+      <select class="form-select input-short" id="size">
+        <option value="4">4</option>
+        <option value="6">6</option>
+        <option value="9">9</option>
+      </select>
+    </div>
+    <button class="btn btn-primary" onclick="createGrid()">Generate</button>
+    <hr>
+    <div class="row">
+      <div class="col-md-8" id="grids-container"></div>
+      <div class="col-md-4" id="colorPaletteContainer" style="display: none;"></div>
+    </div>
+    <button class="btn btn-success" onclick="checkSolution()">Check Answers</button>
+    <button class="btn btn-warning" onclick="showSolution()">Show Solution</button>
+    <button class="btn btn-danger" onclick="resetGrid()">Reset Grid</button>
+    <button class="btn btn-success customizeColorsButton" onclick="showColorPickers()">Customize Colors</button>
+    <hr>
+    <div id="customizeModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>Customize Colors</h2>
+        <div id="palette" class="palette-container">
+          <div class="color-picker">
+            <input type="text" id="picker-1" value="#FF0000" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-2" value="#0000FF" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-3" value="#339933" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-4" value="#FFFF00" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-5" value="#A020F0" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-6" value="#FFA500" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-7" value="#00FFFF" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-8" value="#FF00FF" data-coloris>
+          </div>
+          <div class="color-picker">
+            <input type="text" id="picker-9" value="#A52A2A" data-coloris>
+          </div>
+        </div>
+        <div class="button-group">
+          <button onclick="resetColors()" class="reset-colors-button btn btn-primary">Reset Colors</button>
+          <button class="close-modal-button btn btn-primary" onclick="closeModal()">Close</button>
+        </div>
+      </div>
+    </div>
+    <div id="solutionModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeSolutionModal()">&times;</span>
+        <h2>Solution</h2>
+        <div id="solutionGrid" class="grid-container"></div>
+        <div class="button-group">
+          <button onclick="createGrid(); closeSolutionModal();" class="reset-colors-button btn btn-primary">Try Again</button>
+          <button class="close-modal-button btn btn-primary" onclick="closeSolutionModal()">Close</button>
+        </div>
       </div>
     </div>
   </div>
-  <div class="row border-above">
-    <div class="column">
-      <div id="grid2"></div>
-    </div>
-  </div>
+  <script src="script.js"></script>
 </body>
-
 </html>
